Bug 141677 - UNO Object Inspector: Methods and Properties columns don't sort (gen)
Summary: UNO Object Inspector: Methods and Properties columns don't sort (gen)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Gülşah Köse
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: UNO-Object-Inspector
  Show dependency treegraph
 
Reported: 2021-04-13 15:02 UTC by Olivier Hallot
Modified: 2021-05-19 09:53 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2021-04-13 15:02:09 UTC
Steps to reproduce:
1. Open Writer
2. Tools - Development tools
3. Select an object on the left
4. Under Methods and Properties tab, click on the headers of the columns

The order of the displayed column does not change.

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 32ad749a512b03e2d4588de667e397949cc51958
CPU threads: 16; OS: Linux 5.8; UI render: default; VCL: x11
Locale: pt-BR (en_US.UTF-8); UI: pt-BR
Calc: CL
Comment 1 Xisco Faulí 2021-04-14 09:15:33 UTC
Yet another gen problem ( not reproducible with GTK3 )

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 77419c6f3aba1fd5b1660795923c22a39bdb1bad
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2021-05-17 21:57:58 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b1c0734ffe0f395757b6e0cea7830d820231afeb

tdf#141677 Make columns sortable

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2021-05-19 09:53:25 UTC
Verified in

Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: b238522ca121ca8f863fe4d3394ade088a65ad01
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Gülşah Köse, thanks for fixing this issue!!