tdf#141677 Make columns sortable

Change-Id: Ib4cb8aaba4c59a7afa347f8010deef41477b77f9